src/objects/Product_Fields_Filter_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BLANK</fullName>
                </value>
                <value>
                    <fullName>DEZAAN</fullName>
                </value>
                <value>
                    <fullName>HERSHEY</fullName>
                </value>
                <value>
                    <fullName>HUYSMAN</fullName>
                </value>
                <value>
                    <fullName>JOANES</fullName>
                </value>
                <value>
                    <fullName>MACAO</fullName>
                </value>
                <value>
                    <fullName>NEUTRAL</fullName>
                </value>
                <value>
                    <fullName>STARBUCKS</fullName>
                </value>
                <value>
                    <fullName>UNICAO</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>CPKELCO</fullName>
                </value>
                <value>
                    <fullName>DAMIN</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>NICHE</fullName>
                </value>
                <value>
                    <fullName>PLOT</fullName>
                </value>
                <value>
                    <fullName>TRIAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Family__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>03-Cocoa and Speciality</fullName>
                    <label>Cocoa</label>
                </value>
                <value>
                    <fullName>04-Dairy</fullName>
                    <label>Dairy</label>
                </value>
                <value>
                    <fullName>12-Spices</fullName>
                    <label>Spices</label>
                </value>
                <value>
                    <fullName>09-Cashew</fullName>
                    <label>Cashew</label>
                </value>
                <value>
                    <fullName>10-Peanuts</fullName>
                    <label>Peanuts</label>
                </value>
                <value>
                    <fullName>11-Almond</fullName>
                    <label>Almond</label>
                </value>
                <value>
                    <fullName>16-Sesame</fullName>
                    <label>Sesame</label>
                </value>
                <value>
                    <fullName>22-Hazelnut</fullName>
                    <label>Hazelnut</label>
                </value>
                <value>
                    <fullName>25-Pistachio</fullName>
                    <label>Pistachio</label>
                </value>
                <value>
                    <fullName>26-Walnut</fullName>
                    <label>Walnut</label>
                </value>
                <value>
                    <fullName>29-Super foods</fullName>
                    <label>Super foods</label>
                </value>
                <value>
                    <fullName>30-Contract mfg</fullName>
                    <label>Contract mfg</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Category_2__c</fullName>
        <label>Product Sub Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Sub_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Sub_Category_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <label>Product Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Sub_Category</valueSetName>
        </valueSet>
    </fields>
    <label>Product Fields Filter Setup</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Fields Filter Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>